--- a/Soccer_Matching/build.gradle
+++ b/Soccer_Matching/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: "$servletVersion"
     compile group: 'org.springframework', name: 'spring-webmvc', version: "$springVersion"
     compile group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: "$springSecurityVersion"
+    compile "org.springframework.security:spring-security-config:$springSecurityVersion"
+    compile "org.springframework.security:spring-security-taglibs:$springSecurityVersion"
     compile group: 'mysql', name: 'mysql-connector-java', version: "$mysqlVersion"
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: "$dbcp2Version"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "$jacksonVersion"
